--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
